header-area added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="header-area">
+        <div class="container">
+            <div class="header-top">
+                <div class="logo"><h3>G3 Architects</h3></div>
+                <nav class="menu-section">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="">Login</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header-banner">
+                <div class="banner-content">
+                    <h2>Brand New Group of Architects</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <a href="">Explore More</a>
+                </div>
+                <div class="banner-img"><img src="images/banner.png" alt=""></div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer class="footer-area">
+
+    </footer>
 </body>
 </html>
