--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="banner-content">
                     <h2>Brand New Group of Architects</h2>
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                    <a href="">Explore More</a>
+                    <a class="btn" href="">Explore More</a>
                 </div>
                 <div class="banner-img"><img src="images/banner.png" alt=""></div>
             </div>
@@ -34,7 +34,58 @@
     </header>
 
     <main>
+        <section class="our-features-area">
+            <div class="container">
+               <div class="our-features">
+                <div class="features-img">
+                    <img src="images/team1.png" alt="Team One Image">
+                    <img src="images/team2.png" alt="Team One Image">
+                    <img src="images/team3.png" alt="Team One Image">
+                    <img src="images/team4.png" alt="Team One Image">
+                </div>
+                <div class="feature-content">
+                    <h2>Quick list <span>of Our</span> <span class="feature-mark">Features</span></h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <a class="btn" href="">Explore More</a>
+                </div>
+               </div>
+            </div>
+        </section>
 
+        <section class="populer-feature-area">
+            <div class="container">
+                <div class="popular-features">
+                    <div class="popular-feature-content">
+                        <div class="feature-intro">
+                            <h3>Features you will love & enjoy</h3>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                        </div>
+                        <div class="top-features">
+                            <div class="single-features">
+                                <h4>Desktop & Mobile Version</h4>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                            </div>
+                            <div class="single-features">
+                                <h4>Drag & Drop Builder</h4>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                            </div>
+                            <div class="single-features">
+                                <h4>Awesome Modern Design</h4>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                            </div>
+                            <div class="single-features">
+                                <h4>Super Easy to Edit</h4>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="popular-feature-img">
+                        <img src="images/architect.png" alt="">
+                        <button>10+Year <span>Experience</span></button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer-area">
