our Achivement and sponspors section added

--- a/index.html
+++ b/index.html
@@ -86,6 +86,47 @@
                 </div>
             </div>
         </section>
+
+
+        <section class="achivement-area">
+            <div class="container">
+                <h3>Some Facts</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="our-achivements">
+                    <div class="single-achivement">
+                        <img src="images/icons/ribon.png" alt="">
+                        <p>54 <span>Awards Winnings</span></p>
+                    </div>
+                    <div class="single-achivement">
+                        <img src="images/icons/projects.png" alt="">
+                        <p>1458 <span>Project Finished</span></p>
+                    </div>
+                    <div class="single-achivement">
+                        <img src="images/icons/customers.png" alt="">
+                        <p>590 <span>Clients Worked</span></p>
+                    </div>
+                    <div class="single-achivement">
+                        <img src="images/icons/email.png" alt="">
+                        <p>22580 <span>Email Send</span></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="our-sponspors-area">
+            <div class="container">
+                <h3>Our Sponspors</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="our-sponspors">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
+            </div>
+        </section>
+       
     </main>
 
     <footer class="footer-area">
