contact us and footer section added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3-Architects</title>
-    <!-- Main style file  -->
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/6c59b73ac6.js" crossorigin="anonymous"></script>
+    <!-- Main stylesheet  -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -126,11 +128,50 @@
                 </div>
             </div>
         </section>
-       
+        <section class="contact-area">
+            <div class="container">
+                <h3>Contact Us</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="contact-option">
+                    <div class="contact-address">
+                        <div class="address">
+                            <i class="fa-solid fa-location-dot"></i>
+                           <p><span>ADDRESS</span>1234 street, new york, usa</p>
+                        </div>
+                        <div class="address">
+                            <i class="fa-solid fa-envelope"></i>
+                           <p><span>EMAIL</span>info@mail.com</p>
+                        </div>
+                        <div class="address">
+                            <i class="fa-solid fa-phone"></i>
+                           <p><span>PHONE</span>+1234 456 789</p>
+                        </div>
+                        <div class="address">
+                            <i class="fa-solid fa-globe"></i>
+                           <p><span>WEBSITE</span>www.website.com</p>
+                        </div>
+                    </div>
+                    <div class="message">
+                        <form action="">
+                            <input type="text" placeholder="Name">
+                            <input type="text" placeholder="Subject">
+                            <input type="email" placeholder="Email">
+                            <textarea placeholder="Message"></textarea>
+                            <input type="submit" value="SEND">
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer-area">
-
+        <div class="container">
+            <div class="footer-text">
+                <p>All rights reserved copyright@2023 startup landing page design</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
