--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+
+    <!-- Header Area -->
     <header class="header-area">
         <div class="container">
             <div class="header-top">
@@ -36,6 +38,8 @@
     </header>
 
     <main>
+
+        <!-- Our-Features-Area -->
         <section class="our-features-area">
             <div class="container">
                <div class="our-features">
@@ -54,6 +58,7 @@
             </div>
         </section>
 
+        <!-- Populer-Feature-Area -->
         <section class="populer-feature-area">
             <div class="container">
                 <div class="popular-features">
@@ -89,7 +94,7 @@
             </div>
         </section>
 
-
+        <!-- Achivement-Area -->
         <section class="achivement-area">
             <div class="container">
                 <h3>Some Facts</h3>
@@ -115,6 +120,7 @@
             </div>
         </section>
 
+        <!-- Our-Sponspors-Area -->
         <section class="our-sponspors-area">
             <div class="container">
                 <h3>Our Sponspors</h3>
@@ -128,6 +134,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Contact-Area -->
         <section class="contact-area">
             <div class="container">
                 <h3>Contact Us</h3>
@@ -166,6 +174,7 @@
         </section>
     </main>
 
+    <!-- Footer-Area -->
     <footer class="footer-area">
         <div class="container">
             <div class="footer-text">
