fix some spelling problem

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <!-- Our-Sponspors-Area -->
         <section class="our-sponspors-area">
             <div class="container">
-                <h3>Our Sponspors</h3>
+                <h3>Our Sponsors</h3>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
                 <div class="our-sponspors">
                     <img src="images/sponsors/spotify.png" alt="">
